--- a/data/interfaces/default/recently_added.html
+++ b/data/interfaces/default/recently_added.html
@@ -19,6 +19,7 @@ parent_title            Returns the name of the artist.
 grandparent_title       Returns the name of the show.
 media_index             Returns the index number of the episode.
 parent_media_index      Returns the index number of the season.
+originally_available_at Returns the availability date of the media item.  
 section_id              Returns the library section number of the media item.
 library_name            Returns the library section name of the media item.
 year                    Returns the release year of the movie, episode, or album.
@@ -32,13 +33,16 @@ DOCUMENTATION :: END
 
 % if data != None:
 <%
-    from plexpy.helpers import cast_to_int, page, short_season
+    from plexpy.helpers import cast_to_int, page, short_season, format_date_based_show
 %>
 % if data:
 <div class="dashboard-recent-media-row">
     <div id="recently-added-row-scroller" style="left: 0;">
         <ul class="dashboard-recent-media list-unstyled">
             % for item in data:
+            % if not item['media_index']:
+            item['originally_available_at'] = format_date_based_show(item['originally_available_at'])
+            % endif
             <div class="dashboard-recent-media-instance">
                 <li data-type="${item['media_type']}">
                     % if item['media_type'] == 'movie':
@@ -146,9 +150,13 @@ DOCUMENTATION :: END
                             <a href="${page('info', item['rating_key'])}" title="${item['title']}">${item['title']}</a>
                         </h3>
                         <h3 class="text-muted">
+                            % if item['media_index']:
                             <a href="${page('info', item['parent_rating_key'])}" title="${item['parent_title']}">${short_season(item['parent_title'])}</a>
                             &middot;
                             <a href="${page('info', item['rating_key'])}" title="Episode ${item['media_index']}">E${item['media_index']}</a>
+                            % else:
+                            <a href="${page('info', item['rating_key'])}" title="Episode ${item['originally_available_at']}">E${item['originally_available_at']}</a>
+                            % endif
                         </h3>
                     </div>
                     % elif item['media_type'] == 'album':
