info header/breadcrumb and desc uniformity

--- a/data/interfaces/default/current_activity_instance.html
+++ b/data/interfaces/default/current_activity_instance.html
@@ -18,7 +18,7 @@ media_type                  Returns the type of session. Either 'track', 'episod
 thumb                       Returns the location of the item's thumbnail. Use with pms_image_proxy.
 bif_thumb                   Returns the location of the item's bif thumbnail. Use with pms_image_proxy.
 art                         Returns the location of the item's artwork
-originally_available_at     Returns the availability date of the media item.  
+originally_available_at     Returns the air date of the item.
 progress_percent            Returns the current progress of the item. 0 to 100.
 user                        Returns the name of the user owning the session.
 user_id                     Returns the Plex user id if available.
