--- a/data/interfaces/default/info.html
+++ b/data/interfaces/default/info.html
@@ -41,7 +41,7 @@ DOCUMENTATION :: END
 
     from plexpy import notifiers
     from plexpy.common import MEDIA_TYPE_HEADERS, MEDIA_FLAGS_AUDIO, MEDIA_FLAGS_VIDEO
-    from plexpy.helpers import page, get_percent, cast_to_int, short_season
+    from plexpy.helpers import page, get_percent, cast_to_int, short_season, format_date_based_show
 
     # Get audio codec file
     def af(codec):
@@ -81,9 +81,14 @@ DOCUMENTATION :: END
 <%
     data = defaultdict(lambda: None, **metadata)
     media_info = defaultdict(lambda: None, **(data['media_info'][0] if data['media_info'] else {}))
+    episode = ''
     season = ''
     if data['media_type'] == 'episode':
         season = short_season(data['parent_title'])
+        if data['media_index']:
+            episode = data['media_index']
+        else:
+            episode = format_date_based_show(data['originally_available_at'])
     elif data['media_type'] == 'season':
         season = short_season(data['title'])
 %>
@@ -138,7 +143,7 @@ DOCUMENTATION :: END
                         <span class="breadcrumb-arrow"><i class="fa fa-chevron-right"></i></span>
                         <li><a href="${page('info', data['parent_rating_key'])}">${data['parent_title']}</a></li>
                         <span class="breadcrumb-arrow"><i class="fa fa-chevron-right"></i></span>
-                        <li class="active metadata-xml">Episode ${data['media_index']} - ${data['title']}</li>
+                        <li class="active metadata-xml">Episode ${episode} - ${data['title']}</li>
                         % elif data['media_type'] == 'artist':
                         <li><a href="${page('library', data['section_id'])}">${data['library_name']}</a></li>
                         <span class="breadcrumb-arrow"><i class="fa fa-chevron-right"></i></span>
@@ -261,7 +266,11 @@ DOCUMENTATION :: END
                         % elif data['media_type'] == 'episode':
                         <h1><a href="${page('info', data['grandparent_rating_key'])}">${data['grandparent_title']}</a></h1>
                         <h2>${data['title']}</h2>
-                        <h3 class="hidden-xs">${season} &middot; E${data['media_index']}</h3>
+                            % if data['media_index']:
+                            <h3 class="hidden-xs">${season} &middot; E${episode}</h3>
+                            % else:
+                            <h3 class="hidden-xs">E${episode}</h3>
+                            % endif
                         % elif data['media_type'] == 'album':
                         <h1><a href="${page('info', data['parent_rating_key'])}">${data['parent_title']}</a></h1>
                         <h2>${data['title']}</h2>
