--- a/data/interfaces/default/library_recently_added.html
+++ b/data/interfaces/default/library_recently_added.html
@@ -19,7 +19,7 @@ parent_title            Returns the name of the artist.
 grandparent_title       Returns the name of the show.
 media_index             Returns the index number of the episode.
 parent_media_index      Returns the index number of the season.
-originally_available_at Returns the availability date of the media item.  
+originally_available_at Returns the air date of the media item.
 section_id              Returns the library section number of the media item.
 library_name            Returns the library section name of the media item.
 year                    Returns the release year of the movie, episode, or album.
