--- a/data/interfaces/newsletters/recently_added.internal.html
+++ b/data/interfaces/newsletters/recently_added.internal.html
@@ -647,9 +647,9 @@
                                                                                             </tr>
                                                                                         </table>
                                                                                     </td>
-                                                                                    % if movie['rating']:
-                                                                                    <% rating = int(round(float(movie['rating']) / 2)) %>
-                                                                                    <td class="star-rating-container" title="${int(float(movie['rating'])/0.1)}%" align="right">
+                                                                                    % if movie['rating'] or movie['audience_rating']:
+                                                                                    <% rating = int(round(float(movie['rating'] or movie['audience_rating']) / 2)) %>
+                                                                                    <td class="star-rating-container" title="${int(float(movie['rating'] or movie['audience_rating'])/0.1)}%" align="right">
                                                                                         <table border="0" cellpadding="0" cellspacing="0">
                                                                                             <tr>
                                                                                                 % for _ in range(rating):
@@ -800,9 +800,9 @@
                                                                                             </tr>
                                                                                         </table>
                                                                                     </td>
-                                                                                    % if show['rating']:
-                                                                                    <% rating = int(round(float(show['rating']) / 2)) %>
-                                                                                    <td class="star-rating-container" title="${int(float(show['rating'])/0.1)}%" align="right">
+                                                                                    % if show['rating'] or show['audience_rating']:
+                                                                                    <% rating = int(round(float(show['rating'] or show['audience_rating']) / 2)) %>
+                                                                                    <td class="star-rating-container" title="${int(float(show['rating'] or show['audience_rating'])/0.1)}%" align="right">
                                                                                         <table border="0" cellpadding="0" cellspacing="0">
                                                                                             <tr>
                                                                                                 % for _ in range(rating):
@@ -916,9 +916,9 @@
                                                                                             </tr>
                                                                                         </table>
                                                                                     </td>
-                                                                                    % if album['rating']:
-                                                                                    <% rating = int(round(float(album['rating']) / 2)) %>
-                                                                                    <td class="star-rating-container" title="${int(float(album['rating'])/0.1)}%" align="right">
+                                                                                    % if album['rating'] or album['audience_rating']:
+                                                                                    <% rating = int(round(float(album['rating'] or album['audience_rating']) / 2)) %>
+                                                                                    <td class="star-rating-container" title="${int(float(album['rating'] or album['audience_rating'])/0.1)}%" align="right">
                                                                                         <table border="0" cellpadding="0" cellspacing="0">
                                                                                             <tr>
                                                                                                 % for _ in range(rating):
@@ -1034,9 +1034,9 @@
                                                                                             </tr>
                                                                                         </table>
                                                                                     </td>
-                                                                                    % if video['rating']:
-                                                                                    <% rating = int(round(float(video['rating']) / 2)) %>
-                                                                                    <td class="star-rating-container" title="${int(float(video['rating'])/0.1)}%" align="right">
+                                                                                    % if video['rating'] or video['audience_rating']:
+                                                                                    <% rating = int(round(float(video['rating'] or video['audience_rating']) / 2)) %>
+                                                                                    <td class="star-rating-container" title="${int(float(video['rating'] or video['audience_rating'])/0.1)}%" align="right">
                                                                                         <table border="0" cellpadding="0" cellspacing="0">
                                                                                             <tr>
                                                                                                 % for _ in range(rating):
