--- a/data/interfaces/default/welcome.html
+++ b/data/interfaces/default/welcome.html
@@ -40,6 +40,16 @@
 
 <body>
 <div class="container-fluid">
+    % if plexpy.DOCKER and not plexpy.DOCKER_MOUNT:
+    <div class="row">
+        <div class="col-md-12">
+            <div class="alert alert-danger docker-mount" role="alert" style="width: 700px;">
+                The <span class="inline-pre">/config</span> volume mount was not configured properly for the Docker container.
+                All data may be cleared when the container is recreated or updated.
+            </div>
+        </div>
+    </div>
+    % endif
     <div class="row">
         <div class="wizard" id="setup-wizard" data-title="Tautulli Setup Wizard">
             <form>
