--- a/data/interfaces/default/welcome.html
+++ b/data/interfaces/default/welcome.html
@@ -40,7 +40,7 @@
 
 <body>
 <div class="container-fluid">
-    % if plexpy.DOCKER and not plexpy.DOCKER_MOUNT:
+    % if plexpy.CONFIG.CHECK_DOCKER_MOUNT and plexpy.DOCKER and not plexpy.DOCKER_MOUNT:
     <div class="row">
         <div class="col-md-12">
             <div class="alert alert-danger docker-mount" role="alert" style="width: 700px;">
