Fix system timezone string

--- a/data/interfaces/default/configuration_table.html
+++ b/data/interfaces/default/configuration_table.html
@@ -69,7 +69,7 @@ DOCUMENTATION :: END
         </tr>
         <tr>
             <td>System Timezone:</td>
-            <td>${plexpy.SYS_TIMEZONE.zone} (${'UTC{}'.format(plexpy.SYS_UTC_OFFSET)})
+            <td>${str(plexpy.SYS_TIMEZONE)} (${'UTC{}'.format(plexpy.SYS_UTC_OFFSET)})
         </tr>
         <tr>
             <td>Python Version:</td>
