--- a/data/interfaces/default/graphs.html
+++ b/data/interfaces/default/graphs.html
@@ -1,7 +1,7 @@
 <%inherit file="base.html"/>
 
 <%def name="headIncludes()">
-<link rel="stylesheet" href="${http_root}css/dataTables.bootstrap.css">
+<link rel="stylesheet" href="${http_root}css/datatables.bootstrap.min.css">
 <link rel="stylesheet" href="${http_root}css/tautulli-dataTables.css">
 </%def>
 
@@ -225,7 +225,7 @@
 </%def>
 
 <%def name="javascriptIncludes()">
-<script src="${http_root}js/highcharts/js/highcharts.js"></script>
+<script src="${http_root}js/highcharts.min.js"></script>
 <script src="${http_root}js/jquery.dataTables.min.js"></script>
 <script src="${http_root}js/dataTables.bootstrap.min.js"></script>
 <script src="${http_root}js/dataTables.bootstrap.pagination.js"></script>
