--- a/data/interfaces/default/logs.html
+++ b/data/interfaces/default/logs.html
@@ -4,7 +4,7 @@
 %>
 
 <%def name="headIncludes()">
-<link rel="stylesheet" href="${http_root}css/dataTables.bootstrap.css">
+<link rel="stylesheet" href="${http_root}css/datatables.bootstrap.min.css">
 <link rel="stylesheet" href="${http_root}css/tautulli-dataTables.css">
 <style>
     td {word-break: break-all;}
