--- a/data/interfaces/default/user.html
+++ b/data/interfaces/default/user.html
@@ -30,7 +30,7 @@ DOCUMENTATION :: END
 %>
 
 <%def name="headIncludes()">
-<link rel="stylesheet" href="${http_root}css/datatables.bootstrap.min.css">
+<link rel="stylesheet" href="${http_root}css/dataTables.bootstrap.min.css">
 <link rel="stylesheet" href="${http_root}css/dataTables.colVis.css">
 <link rel="stylesheet" href="${http_root}css/tautulli-dataTables.css">
 </%def>
