--- a/data/interfaces/default/info.html
+++ b/data/interfaces/default/info.html
@@ -539,6 +539,34 @@ DOCUMENTATION :: END
                     </div>
                 </div>
                 % endif
+                % if data['media_type'] in ('movie', 'show', 'season', 'episode', 'artist', 'album', 'track'):
+                <div class="col-md-12">
+                    <div class="table-card-header">
+                        <div class="header-bar">
+                            <span><i class="fa fa-line-chart"></i> Global Stats</span>
+                        </div>
+                    </div>
+                    <div class="table-card-back">
+                        <div id="watch-time-stats" class="user-overview-stats-wrapper">
+                            <div class='muted'><i class="fa fa-refresh fa-spin"></i> Loading data...</div>
+                            <br>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-12">
+                    <div class="table-card-header">
+                        <div class="header-bar">
+                            <span><i class="fa fa-group"></i> User Stats</span>
+                        </div>
+                    </div>
+                    <div class="table-card-back">
+                        <div id="user-stats" class="user-player">
+                            <div class='muted'><i class="fa fa-refresh fa-spin"></i> Loading data...</div>
+                            <br>
+                        </div>
+                    </div>
+                </div>
+                % endif
                 <%
                     history_type = data['media_type'] in ('movie', 'show', 'season', 'episode', 'artist', 'album', 'track')
                     history_active = 'active' if history_type else ''
@@ -890,6 +918,28 @@ DOCUMENTATION :: END
         },
         complete: function(xhr, status) {
             $("#children-list").html(xhr.responseText);
+        }
+    });
+</script>
+% endif
+% if data['media_type'] in ('movie', 'show', 'season', 'episode', 'artist', 'album', 'track'):
+<script>
+    // Populate watch time stats
+    $.ajax({
+        url: 'item_watch_time_stats',
+        async: true,
+        data: { rating_key: "${data['rating_key']}", media_type: "${data['media_type']}" },
+        complete: function(xhr, status) {
+            $("#watch-time-stats").html(xhr.responseText);
+        }
+    });
+    // Populate user stats
+    $.ajax({
+        url: 'item_user_stats',
+        async: true,
+        data: { rating_key: "${data['rating_key']}", media_type: "${data['media_type']}" },
+        complete: function(xhr, status) {
+            $("#user-stats").html(xhr.responseText);
         }
     });
 </script>
