use_ssl backwards compatibility & fix use-before-set PMS_SSL

--- a/data/interfaces/default/settings.html
+++ b/data/interfaces/default/settings.html
@@ -2657,7 +2657,7 @@ $(document).ready(function() {
                 data: {
                     hostname: pms_ip,
                     port: pms_port,
-                    ssl: pms_ssl,
+                    use_ssl: pms_ssl,
                     remote: pms_is_remote,
                     manual: pms_url_manual,
                     get_url: true,
