Revert use_ssl to ssl for API

--- a/data/interfaces/default/welcome.html
+++ b/data/interfaces/default/welcome.html
@@ -518,7 +518,7 @@ $(document).ready(function() {
                         hostname: pms_ip,
                         port: pms_port,
                         identifier: pms_identifier,
-                        use_ssl: pms_ssl,
+                        ssl: pms_ssl,
                         remote: pms_is_remote
                     },
                     cache: true,
