Add upload database max file size note

--- a/data/interfaces/default/app_import.html
+++ b/data/interfaces/default/app_import.html
@@ -32,7 +32,7 @@
                             </div>
                         </div>
                     </div>
-                    <p class="help-block">Upload the ${app} database file you wish to import.</p>
+                    <p class="help-block">Upload the ${app} database file you wish to import (max file size is 1GB).</p>
                 </div>
                 <div class="form-group">
                     <label for="import_database_path">Option 2: Browse for a Database File</label>
