Remove media_type argument from item stats API call

--- a/data/interfaces/default/info.html
+++ b/data/interfaces/default/info.html
@@ -931,7 +931,7 @@ DOCUMENTATION :: END
     $.ajax({
         url: 'item_watch_time_stats',
         async: true,
-        data: { rating_key: "${data['rating_key']}", media_type: "${data['media_type']}" },
+        data: { rating_key: "${data['rating_key']}" },
         complete: function(xhr, status) {
             $("#watch-time-stats").html(xhr.responseText);
         }
@@ -940,7 +940,7 @@ DOCUMENTATION :: END
     $.ajax({
         url: 'item_user_stats',
         async: true,
-        data: { rating_key: "${data['rating_key']}", media_type: "${data['media_type']}" },
+        data: { rating_key: "${data['rating_key']}" },
         complete: function(xhr, status) {
             $("#user-stats").html(xhr.responseText);
         }
