Fix Crypto donation referrer link

--- a/data/interfaces/default/base.html
+++ b/data/interfaces/default/base.html
@@ -268,7 +268,7 @@ ${next.modalIncludes()}
                         <p>
                             Click the button below to continue to Coinbase.
                         </p>
-                        <a href="https://blankrefer.com/?https://commerce.coinbase.com/checkout/8a9fa08c-8a38-409e-9220-868124c4ba0c" target="_blank" rel="noreferrer" class="donate-with-crypto">
+                        <a href="${anon_url('https://commerce.coinbase.com/checkout/8a9fa08c-8a38-409e-9220-868124c4ba0c')}" target="_blank" rel="noreferrer" class="donate-with-crypto">
                             <span>Donate with Crypto</span>
                         </a>
                     </div>
