--- a/data/interfaces/default/newsletter_auth.html
+++ b/data/interfaces/default/newsletter_auth.html
@@ -13,6 +13,11 @@
     <link href="${http_root}css/opensans.min.css" rel="stylesheet">
     <link href="${http_root}css/font-awesome.all.min.css" rel="stylesheet">
     <link href="${http_root}css/font-awesome.v4-shims.min.css" rel="stylesheet">
+
+    <!-- Favicons -->
+    <link rel="icon" type="image/png" sizes="32x32" href="${http_root}images/favicon/favicon-32x32.png?v=2.6.0">
+    <link rel="icon" type="image/png" sizes="16x16" href="${http_root}images/favicon/favicon-16x16.png?v=2.6.0">
+    <link rel="shortcut icon" href="${http_root}images/favicon/favicon.ico?v=2.6.0">
 </head>
 
 <body>
