--- a/data/interfaces/default/settings.html
+++ b/data/interfaces/default/settings.html
@@ -2746,7 +2746,9 @@ $(document).ready(function() {
         $("#pms-token-status").html('<i class="fa fa-refresh fa-spin"></i>&nbsp; Waiting for authentication...').fadeIn('fast');
     }
     function OAuthSuccessCallback(authToken) {
-        $.post('save_pms_token', { token: authToken });
+        $.post('save_pms_token', { token: authToken }, function() {
+            showMsg('<i class="fa fa-check"></i> Saved new Plex.tv token.', false, true, 5000);
+        });
         $("#pms-token-status").html('<i class="fa fa-check"></i>&nbsp; Authentication successful.').fadeIn('fast');
         $("#token_error_bar").hide();
         getServerOptions(authToken);
